argocd/media-server/audiobookshelf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - audiobookshelf.yanello.net
  rules:
    - backendRefs:
        - name: audiobookshelf
          namespace: audiobookshelf
          port: 80
