argocd/media-server/audiobookshelf/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: audiobookshelf
spec:
  endpointSelector:
    matchLabels:
      app: audiobookshelf
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
